--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,17 +13,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Create .env file
         run: |
-          cat <<EOF >> .env
-PORT=${{ secrets.PORT }}
-DATABASE_URL=${{ secrets.DB_URL }}
-EOF
+          echo "PORT=${{ secrets.PORT }}" >> .env
+          echo "DB_URL${{ secrets.DB_URL }}" >> .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
         run: docker build -t manafabdulc/todos .
       - name: Push image to dockerhub
         run: docker push manafabdulc/todos:latest    
-        
+
   deploy:
     needs: build
     runs-on: self-hosted
