--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,8 +33,10 @@ jobs:
       - name: Create folder for volume 
         run: sudo mkdir -p /mnt/psql
       - name: Remove postgres db
-        run: docker rm -f postgres-container    
+        run: docker rm -f postgres-container
+      - name: Create network
+        run: docker network create my-network        
       - name: Run db container 
-        run:  docker run --name postgres-container -e POSTGRES_USER=manaf -e POSTGRES_PASSWORD=12345 -e POSTGRES_DB=todo -v /mnt/psql:/var/lib/postgresql/data -p 5432:5432 -d postgres:latest
+        run:  docker run --name postgres-container --network my-network -e POSTGRES_USER=manaf -e POSTGRES_PASSWORD=12345 -e POSTGRES_DB=todo -v /mnt/psql:/var/lib/postgresql/data -p 5432:5432 -d postgres:latest
       - name: run application image
-        run: docker run -d -p 5050:5050 manafabdulc/todos           
+        run: docker run --name todos --network my-network -e PORT=5050 -e DB_URL="host=postgres-container user=manaf password=12345 dbname=todo port=5432 sslmode=disable TimeZone=Asia/Shanghai" -p 5050:5050 manafabdulc/todos            
