--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Run db container 
         run:  docker run --name postgres-container --network my-network -e POSTGRES_USER=manaf -e POSTGRES_PASSWORD=12345 -e POSTGRES_DB=todo -v /mnt/psql:/var/lib/postgresql/data -p 5432:5432 -d postgres:latest
       - name: run application image
-        run: docker run --name todos --network my-network -e PORT=5050 -e DB_URL="host=postgres-container user=manaf password=12345 dbname=todo port=5432 sslmode=disable TimeZone=Asia/Shanghai" -p 5050:5050 manafabdulc/todos            
+        run: docker run --name todos --network my-network -e PORT=${{ secrets.PORT }} -e DB_URL=${{ secrets.DB_URL }} -p ${{ secrets.PORT }}:${{ secrets.PORT }} -d manafabdulc/todos            
