--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,8 @@ jobs:
     steps: 
       - name: pull the docker image
         run: docker pull manafabdulc/todos
+      - name: Checking 
+        run: echo ${{ secrets.PORT }}  
       - name: Delete old container
         run: docker rm -f todos
       - name: Create folder for volume 
@@ -42,4 +44,3 @@ jobs:
         run:  docker run --name postgres-container --network my-network -e POSTGRES_USER=manaf -e POSTGRES_PASSWORD=12345 -e POSTGRES_DB=todo -v /mnt/psql:/var/lib/postgresql/data -p 5432:5432 -d postgres:latest
       - name: run application image
         run: docker run --name todos --network my-network -e PORT=${{ secrets.PORT }} -e DB_URL=${{ secrets.DB_URL }} -p ${{ secrets.PORT }}:${{ secrets.PORT }} -d manafabdulc/todos    
-                
