--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,10 +11,6 @@ jobs:
     steps: 
       - name: Chckout source
         uses: actions/checkout@v4
-      - name: Create .env file
-        run: |
-          echo "PORT=${{ secrets.PORT }}" >> .env
-          echo "DB_URL${{ secrets.DB_URL }}" >> .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: checking
@@ -28,6 +24,10 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps: 
+      - name: Delete running container
+        run: docker rm -f $(docker ps -aq)
+      - name: Delete all images
+        run: docker rmi $(docker images -aq)  
       - name: pull the docker image
         run: docker pull manafabdulc/todos
       - name: Delete old container
