--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,9 +25,9 @@ jobs:
     runs-on: self-hosted
     steps: 
       - name: Delete running container
-        run: sudo docker rm -f $(docker ps -aq)
+        run: sudo docker rm -f $(sudo docker ps -aq)
       - name: Delete all images
-        run: sudo docker rmi $(docker images -aq)  
+        run: sudo docker rmi $(sudo docker images -aq)  
       - name: pull the docker image
         run: sudo docker pull manafabdulc/todos
       - name: Delete old container
